--- a/src/smart_highlight/config.glade
+++ b/src/smart_highlight/config.glade
@@ -45,7 +45,7 @@
                         </child>
                         <child>
                           <object class="GtkCheckButton" id="matchCaseCheckbutton">
-                            <property name="label" translatable="yes">Match Case</property>
+                            <property name="label" translatable="yes">Match case</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">False</property>
@@ -62,7 +62,7 @@
                         </child>
                         <child>
                           <object class="GtkCheckButton" id="regexSearchCheckbutton">
-                            <property name="label" translatable="yes">Regular Expression</property>
+                            <property name="label" translatable="yes">Regular expression</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">False</property>
